[dev] add recommend books - add recommend books' api & store - add bookId for jumping to book mall - add RecommendBooks - add .text-ellipsis-2 - fix querySelector: using refs instead - fix comments

--- a/src/style/style.less
+++ b/src/style/style.less
@@ -24,3 +24,11 @@ html, body, .app {
   white-space: nowrap;
   overflow: hidden;
 }
+
+.text-ellipsis-2 {
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
